--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>hello before div root</h1>
-    <div id = "root"></div>
+    <div id = "root">
+        <h1>not rendered</h1>
+    </div>
     <h1>hello after div root</h1>
 
     <script type="module" src="./app.js"></script>
